# amos2025ws04-robot-visual-perception

./: .gitignore  CAMERA_CALIBRATION.md  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  sbom-dependencies.csv  sbom.json  start-optibot-windows.ps1  start-optibot.ps1
src/backend/: .dockerignore  .python-version  Dockerfile  Dockerfile.analyzer  Dockerfile.file  Dockerfile.orchestrator  Dockerfile.streamer  Dockerfile.webcam  analyzer.py  camera.py  detector.py  main.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  routes.py  ruff.toml  schemas.py  server.py  state.py  tracks.py  webrtc_utils.py
src/backend/analyzer/: __main__.py  asyncapi.yaml  cli.py  main.py  manager.py  models.py  routes.py  tracked_object.py  tracker.py  tracking_models.py  tracks.py  websocket_manager.py
src/backend/common/: __init__.py  config.py  logging_config.py  metrics.py  orchestrator.py  port_utils.py  protocols.py  typing.py
src/backend/common/core/: camera.py  contracts.py  depth.py  depth_anything.py  depth_pro.py  depth_utils.py  detector.py  download_models_cli.py  model_downloader.py  session.py  (+1 more)
src/backend/file/: main.py  routes.py  tracks.py
src/backend/orchestrator/: __init__.py  __main__.py  main.py  routes.py
src/backend/streamer/: __main__.py  main.py  routes.py  tracks.py
src/backend/tests/: test_analyzer.py  test_main.py  test_server.py  test_utils.py  test_webcam_session_sfu.py
src/backend/webcam/: main.py  routes.py  tracks.py
src/backend/webrtc/: README.md  calibrate.py  index.html  requirements.txt  server.py
(+153 files in other folders)
